--- a/config.toml
+++ b/config.toml
@@ -32,9 +32,9 @@ menu = [
 
 # Footer socials
 socials = [
-    { name = "GitHub", url = "https://github.com/williamyoon2021" },
-    { name = "LinkedIn", url = "https://www.linkedin.com/in/william-yoon-2021/" },
-    { name = "Email", url = "mailto:williamyoon2021@gmail.com" },
+    { name = "GitHub", url = "https://github.com/williamyoon2021", icon = "github" },
+    { name = "LinkedIn", url = "https://www.linkedin.com/in/william-yoon-2021/", icon = "linkedin" },
+    { name = "Email", url = "mailto:williamyoon2021@gmail.com", icon = "email" },
 ]
 
 # Security headers
