--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           cp -r public/* .
           touch .nojekyll
+          git add .
+          git commit -m "Deploy site"
+          git push origin main
