--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ public/
 robots.txt
 zola
 sitemap.xml
+.github/workflows/deploy.yml
+about/index.html
+research/index.html
+projects/index.html
+resume/index.html
+index.html
+
