--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-# Ignore build output
-public/
-__pycache__/
-*.pyc
 .DS_Store
+public/
 .nojekyll
 404.html
 robots.txt
 zola
 sitemap.xml
-about/
-research/
-projects/
-resume/
+about/index.html
+research/index.html
+projects/index.html
+resume/index.html
 
