--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ public/
 robots.txt
 zola
 sitemap.xml
-about/index.html
-research/index.html
-projects/index.html
-resume/index.html
+# about/index.html
+# research/index.html
+# projects/index.html
+# resume/index.html
 
