--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,19 +16,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: Install Zola
         run: |
           curl -L https://github.com/getzola/zola/releases/download/v0.18.0/zola-v0.18.0-x86_64-unknown-linux-gnu.tar.gz | tar xzf -
           echo "$PWD" >> $GITHUB_PATH
 
-      - name: Build and Deploy
-        run: |
-          zola build
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          cp -r public/* .
-          touch .nojekyll
-          git add .
-          git commit -m "Deploy site"
-          git push origin main
+      - name: Build
+        run: zola build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          publish_branch: gh-pages
